# study-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  app2.py  create_db.ipynb  docker-compose.yml  interface.py  main.py  pyproject.toml  try.ipynb
client/: __init__.py
server/: main.py
server/v1/: __init__.py  chat_history.py  config.py  constants.py  db.py  generate_ai_response.py  middleware.py  models.py  server.py
