[project]
name = "study-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.33.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langchain-postgres>=0.0.13",
    "lark>=1.2.2",
    "psycopg>=3.2.9",
]

[dependency-groups]
dev = [
    "protobuf<3.21.0",
]
